src/components/Users/Details/Header/header.scss
@import "../../../../assets/styles/variables";

$red: #e4033b;
$green: #28a745;

.container {
  margin: 20px 0 40px;
  @include flex(row, center, space-between);

  h2 {
    margin: 0;
    flex-shrink: 0;
  }

  .action-btns {
    @include flex(row, left, left, 20px);

    button {
      font-size: 14px;
      font-weight: 600;
      border-radius: 8px;
      padding: 12px 16px;
      width: fit-content;
      background: transparent;
      transition: background-color 0.3s ease;
    }

    .blacklist {
      border: 1px solid $red;
      color: $red;

      &:hover {
        background: lighten($red, 50%);
      }
    }

    .activate {
      border: 1px solid $turquoise;
      color: $turquoise;

      &:hover {
        background: lighten($turquoise, 40%);
      }
    }
  }
}

@media (max-width: $breakpoint-md) {
  .container {
    margin: 20px 0;
  }
}

